<resources>
    <string name="app_name" translatable="false">Corona HelpLines</string>
    <string name="action_signin">Sign In</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_help">Help</string>
    <string name="action_language">Language</string>
    <string name="action_share">Share</string>
    <string name="action_check_for_update">Check Update</string>
    <string name="action_add_public_number">Add</string>
    <string name="action_delete_public_number">Delete</string>
    <string name="calling_intent_start" translatable="false">Calling</string>
    <string name="action_search">Search</string>
    <string name="share">Share</string>
    <string name="setting">Setting</string>
    <string name="government_header">Government</string>
    <string name="public_header">Public</string>
    <string name="state" translatable="false">Utter Pradesh</string>
    <string name="number" translatable="false">+918298462786</string>
    <string name="settings_menu_item">Filter</string>
    <string name="title_activity_settings">Filter</string>
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_name_label</string>
    <string name="settings_order_by_name_label">Name</string>
    <string name="settings_order_by_name_value" translatable="false">name</string>
    <string name="settings_order_by_state_label">State</string>
    <string name="settings_order_by_state_value" translatable="false">state</string>
    <string name="settings_order_by_city_label">City</string>
    <string name="settings_order_by_city_value" translatable="false">city</string>
    <string name="settings_order_by_address_label">Address</string>
    <string name="settings_order_by_address_value" translatable="false">address</string>
    <string name="settings_order_by_global_cases_key" translatable="false">global_order_by</string>
    <string name="settings_order_by_global_cases_country_default" translatable="false">@string/settings_order_by_global_cases_country_label</string>
    <string name="settings_order_by_global_cases_country_label">Country</string>
    <string name="settings_order_by_global_cases_country_value" translatable="false">country</string>
    <string name="settings_order_by_global_cases_cases_label">Cases</string>
    <string name="settings_order_by_global_cases_cases_value" translatable="false">cases</string>
    <string name="settings_order_by_global_cases_deaths_label">Deaths</string>
    <string name="settings_order_by_global_cases_deaths_value" translatable="false">deaths</string>
    <string name="settings_order_by_global_cases_recovered_label">Recovered</string>
    <string name="settings_order_by_global_cases_recovered_value" translatable="false">recovered</string>
    <string name="settings_sort_by_global_cases_key" translatable="false">global_sort_by</string>
    <string name="settings_sort_by_global_cases_default" translatable="false">@string/settings_sort_by_ascending_value</string>
    <string name="settings_sort_by_global_cases_ascending_label">Ascending</string>
    <string name="settings_sort_by_global_cases_ascending_value" translatable="false">ascending</string>
    <string name="settings_sort_by_global_cases_descending_label">Descending</string>
    <string name="settings_sort_by_global_cases_descending_value" translatable="false">descending</string>
    <string name="settings_sort_by_label">Sort By</string>
    <string name="settings_sort_by_key" translatable="false">sort_by</string>
    <string name="settings_sort_by_default" translatable="false">@string/settings_sort_by_ascending_value</string>
    <string name="settings_sort_by_ascending_label">Ascending</string>
    <string name="settings_sort_by_ascending_value" translatable="false">ascending</string>
    <string name="settings_sort_by_descending_label">Descending</string>
    <string name="settings_sort_by_descending_value" translatable="false">descending</string>
    <string name="settings_government_sort_by_label">Sort By</string>
    <string name="settings_government_sort_by_key" translatable="false">gov_by</string>
    <string name="settings_government_sort_by_default" translatable="false">@string/settings_government_sort_by_ascending_value</string>
    <string name="settings_government_sort_by_ascending_label">Ascending</string>
    <string name="settings_government_sort_by_ascending_value" translatable="false">ascending</string>
    <string name="settings_government_sort_by_descending_label">Descending</string>
    <string name="settings_government_sort_by_descending_value" translatable="false">descending</string>
    <string name="search_hint">Search for any detail…</string>
    <string name="error_list_view">No Network (Please check your network connection)</string>
    <string name="empty_list_view">Be first to add number by clicking on (+) button</string>
    <string name="enable_to_upload_data">No Network!\nplease check your internet and back again</string>
    <string name="connect_net_for_more_result">You\'re searching offline, please connect your internet to get more result</string>
    <string name="no_result_found">No result found for</string>
    <string name="term_and_service">Term of Service &amp; Privacy</string>
    <string name="please_read_TnC_PP">We understand the nature and sensitivity of this topic and have taken strong measures to ensure that your data is not compromised.</string>
    <string name="phone_call">Phone Call</string>
    <string name="describe_phone_call">You must allow this permission to make call to any number.</string>
    <string name="internet">Internet</string>
    <string name="describe_internet">Permission is required for some information taken from the net.</string>
    <string name="link_of_TnC_and_PP">If you would like to contribute to safe India please indicate your acceptance of the Term and Condition and the Privacy Policy by clicking on the button below.</string>
    <string name="agree_button_text">Agree</string>
    <string name="term_condition_label">Term &amp; Conditions</string>
    <string name="privacy_policy_label">Privacy Policy</string>
    <string name="how_to_use_app_label">How to use app?</string>
    <string name="contact_us_label">Contact Us</string>
    <string name="about_app_label">About App</string>
    <string name="sign_out_label">Sign Out</string>
    <string name="code_send_label">We send you 6 digit code</string>
    <string name="continue_button">Continue</string>
    <string name="resend_button">Resend</string>
    <string name="not_sign_in_yet">You have not signin yet</string>
    <string name="facing_error">Facing some error please try again later!</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure">Are you sure you want to call on this number?</string>
    <string name="don_t_show_text">Don\'t show again</string>
    <string name="update_dialog_title">Update Available</string>
    <string name="action_home">Home</string>
    <string name="action_live">Live</string>
    <string name="total_cases_label">Total Cases</string>
    <string name="total_cases_placeholder" translatable="false">0</string>
    <string name="total_deaths_label">Total Deaths</string>
    <string name="total_deaths_placeholder" translatable="false">0</string>
    <string name="total_recovered_label">Total Recovered</string>
    <string name="total_recovered_placeholder" translatable="false">0</string>
    <string name="overview_label">Overview</string>
    <string name="name_edit_text_hint">*Name</string>
    <string name="mobile_number_1_edit_text_hint">*Mobile Number 1</string>
    <string name="mobile_number_2_edit_text_hint">Mobile Number 2</string>
    <string name="address_label">Address</string>
    <string name="state_edit_text_hint">*State</string>
    <string name="pin_edit_text_hint">Pin</string>
    <string name="city_edit_text_hint">*City</string>
    <string name="address_line_1_edit_text_hint">*Address Line 1</string>
    <string name="address_line_2_edit_text_hint">Address Line 2</string>
    <string name="introducing" translatable="false">Introducing</string>
    <string name="company_name" translatable="false">by CodeX Editors</string>
    <string name="app_splash_screen_name" translatable="false">COVID19 HelpLines</string>
    <string name="corona_live_update" translatable="false">Corona Live Update</string>
    <string name="press_one_more_time">Press one more time to exit</string>
    <string name="sign_in_note">Note: Before register your number on our application to help people, we recomend you to read Term &amp; Condition
    and Privacy Policy to make sure you will not in trouble.</string>
    <string name="sign_in_link_t_and_c">Term and Condition</string>
    <string name="sign_in_link_privacy_policy">Privacy Policy</string>
    <string name="update_dialog_message">You want to update latest version of an appliation?</string>
</resources>