<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/public_header"
        android:title="@string/public_header">

        <ListPreference
            android:defaultValue="@string/settings_order_by_default"
            android:entries="@array/settings_order_by_labels"
            android:entryValues="@array/settings_order_by_values"
            android:key="@string/settings_order_by_key"
            android:title="@string/settings_order_by_label" />

        <ListPreference
            android:defaultValue="@string/settings_sort_by_default"
            android:entries="@array/settings_sort_by_labels"
            android:entryValues="@array/settings_sort_by_values"
            android:key="@string/settings_sort_by_key"
            android:title="@string/settings_sort_by_label" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/government_header"
        android:title="@string/government_header">

        <ListPreference
            android:defaultValue="@string/settings_government_sort_by_default"
            android:entries="@array/settings_government_sort_by_labels"
            android:entryValues="@array/settings_government_sort_by_values"
            android:key="@string/settings_government_sort_by_key"
            android:title="@string/settings_government_sort_by_label" />

    </PreferenceCategory>
</PreferenceScreen>
