<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_backgroung"
    tools:context=".SplashScreenActivity">

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introducing"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textSize="50sp"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/companyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro_text"
        android:text="@string/company_name"
        android:layout_alignStart="@id/intro_text"
        android:textSize="22sp"
        android:gravity="top|start"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:id="@+id/center_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_splash_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_splash_screen_name"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/corona_live_update"
            android:layout_gravity="center_horizontal"
            android:textSize="18dp"
            android:fontFamily="sans-serif-smallcaps"/>
    </LinearLayout>

</RelativeLayout>